tests/int/snapshots/integration__int__use_command__module_crawk_flags_r_t_e_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - crawk
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::AnalysisOptions
crate::constants::ATTR_CFG
crate::constants::LIB_FILE_NAME
crate::constants::MAIN_FILE_NAME
crate::constants::MODULE_FILE_NAME
crate::constants::MODULE_NAME_TEST
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER
crate::module::analyzer::AnalyzerError
crate::module::analyzer::CrateAnalyzer
crate::module::analyzer::FileReferences
crate::module::analyzer::Result
crate::module::discover::CrateInfo
crate::module::discover::CrateInfoError
crate::module::discover::ModuleInfo
crate::module::path::GroupItem
crate::module::path::PathPrefix
crate::module::path::PathSuffix
crate::module::path::Segments
crate::module::path::TypeReference
crate::module::resolve::extract_public_items

----- stderr -----
