tests/int/snapshots/integration__int__use_command__module_crawk_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - crawk
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::module::analyzer::AnalyzerError
crate::module::analyzer::CrateAnalyzer
crate::module::discover::CrateInfo
crate::module::discover::CrateInfoError
crate::module::discover::ModuleInfo
crate::module::path::GroupItem
crate::module::path::PathPrefix
crate::module::path::PathSuffix
crate::module::path::Segments
crate::module::path::TypeReference
crate::module::resolve::extract_public_items

----- stderr -----
