tests/int/snapshots/integration__int__use_command__module_crawk_flags_t_e_d_1.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - crawk
    - "-t"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::AnalysisOptions
crate::module

----- stderr -----
