tests/int/snapshots/integration__int__use_command__module_lib_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::AnalysisOptions
crate::module::analyzer::{AnalyzerError, CrateAnalyzer}
crate::module::discover::ModuleInfo
crate::module::discover::{CrateInfo, CrateInfoError}
crate::module::path::{GroupItem, PathPrefix, PathSuffix, Segments, TypeReference}
crate::module::resolve::extract_public_items

----- stderr -----
